# linux_about

./: .gitignore  CMakeLists.txt  README.md  build.sh  makefile  motortest.c  udp_video_receiver.py  video_data_get.c
cmake/: arm-toolchain.cmake
inc/: common.h  ffmpeg_muxer.h  image_process.hpp  log.h  msg_deliver.h  readme.md  storage_video.hpp  udp_send.h  v4l2_dev.h
py/: my_opencv_test.py
py_for_pc/TestForOpenCV/codes/: TestForBasic.py
py_for_pc/udp_receive_Display_Haar/: readme.md  udp_video_receiver.py
src/: CMakeLists.txt  ffmpeg_muxer.cpp  image_process.cpp  log.c  main.c  msg_deliver.c  readme.md  storage_video.cpp  udp_send.c  v4l2_dev.c
src/image_process/: image_process.cpp
src/log/: log.c
src/net/: readme.md  udp_send.c
src/v4l2/: readme.md  v4l2_dev.c
